<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizPro Basic</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_quit">Quit</string>
    <string name="end_test">End Test</string>
    <string name="see_results">See Results</string>
    <string name="end_test_label">End Test</string>
    <string name="label_a">A</string>
    <string name="label_b">B</string>
    <string name="label_c">C</string>
    <string name="label_d">D</string>
    <string name="label_e">E</string>
    <string name="label_solution">Solution</string>
    <string name="close_label">Close</string>
    <string name="start_new_test_label">Start New Test</string>
    <string name="back_to_test_label">Back To Test</string>
    <string name="question">Question x/10</string>
    <string name="question_image">Question Image</string>
    <string name="timer_default">10:00</string>
    <string name="tests_label">Tests</string>
    <string name="score_label">Score</string>
    <string name="default_score">Try me out!</string>
    <string name="correct_answers_text">Correct Answers</string>
    <string name="select_test_headline">Please select a test and start practicing</string>
    <string name="review_questions_text">Review these questions</string>
    <string name="low_performance">Low performance!</string>
    <string name="average_performance">Average performance!</string>
    <string name="excellent_performance">Excellent performance!</string>
    <string-array name="tests">
        <item>test 1</item>
        <item>test 2</item>
        <item>test 3</item>
        <item>test 4</item>
        <item>test 5</item>
        <item>test 6</item>
        <item>test 7</item>
    </string-array>

</resources>
